--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p>Седона — не аттракцион для туристов, <span>там течет своя жизнь</span></p>
         </div>
         <div class="features-first-image">
-          <img src="img/index/features-top.jpg" width="800" height="256" alt="City of Sedona">
+          <img src="img/index/top.jpg" width="800" height="256" alt="City of Sedona">
         </div>
       </div>
       <ul class="features-item">
@@ -61,7 +61,7 @@
       </ul>
       <div class="features-second">
         <div class="features-second-image">
-          <img src="img/index/features-bottom.jpg" width="800" height="256" alt="Canyon of Sedona">
+          <img src="img/index/bottom.jpg" width="800" height="256" alt="Canyon of Sedona">
         </div>
         <div class="features-second-text">
           <b>Там есть <span>мост дьявола</span></b>
