--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header">     <!--хедер страницы  -->
-    <div class="container">
+  <div class="container shadow">
+    <header class="main-header">     <!--хедер страницы  -->
       <nav class="main-navigation">          <!--Основная навигация  -->
         <ul class="header-menu">
           <li>
@@ -29,119 +29,119 @@
       <div class="header-logo">   <!-- лого в шапке -->
         <img src="img/index/logo-header.png" width="138" height="70" alt="City of Sedona">
       </div>
-    </div>
-  </header> <!--хедер страницы конец  -->
-  <main class="container shadow"> <!--основной контейнер страницы -->
-    <div class="features">
-      <h1 class="big-text-features">Седона — небольшой городок в Аризоне, <span>заслуживающий большего!</span></h1>
-      <p class="features-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-      <div class="features-first">
-        <div class="features-first-text">
-          <b>Настоящий <span>городок</span></b>
-          <span class="number">№1</span>
-          <p>Седона — не аттракцион для туристов, <span>там течет своя жизнь</span></p>
-        </div>
-        <div class="features-first-image">
-          <img src="img/index/top.jpg" width="800" height="256" alt="City of Sedona">
-        </div>
-      </div>
-      <ul class="features-item">
-        <li class="features-left-image">
-          <b class="features-item-title">Жилье</b>
-          <p class="features-item-description text-gray">Рекомендуем пожить в настоящем <span>мотеле, все как в кино!</span></p>
-        </li>
-        <li class="features-center-image">
-          <b class="features-item-title">Еда</b>
-          <p class="features-item-description text-gray">Всегда заказывайте фирменный бургер, <span>вы не разочаруетесь!</span></p>
-        </li>
-        <li class="features-right-image">
-          <b class="features-item-title">Сувениры</b>
-          <p class="features-item-description text-gray">Не только китайского, но и местного <span>производства!</span></p>
-        </li>
-      </ul>
-      <div class="features-second">
-        <div class="features-second-image">
-          <img src="img/index/bottom.jpg" width="800" height="256" alt="Canyon of Sedona">
-        </div>
-        <div class="features-second-text">
-          <b>Там есть <span>мост дьявола</span></b>
-          <span class="number">№2</span>
-          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-        </div>
-      </div>
-      <ul class="features-items-third-fifth">
-        <li>
-          <b class="features-item-title">Небольшая  <span>площадь</span></b>
-          <span class="number">№3</span>
-          <p class="text-gray">Все достопримечательности <span>находяться очень близко</span></p>
-        </li>
-        <li>
-          <b class="features-item-title">Красивая <span>дорога</span></b>
-          <span class="number">№4</span>
-          <p class="text-gray">Ехать в Седону из Лас-Вегаса совсем  <span>не скучно!</span></p>
-        </li>
-        <li>
-          <b class="features-item-title">Мало <span>туристов</span></b>
-          <span class="number">№5</span>
-          <p class="text-gray">Большинство едет в Гранд-Каньон и <span>толпится там</span></p>
-        </li>
-      </ul>
-      <div class="index-content"> <!-- блок поиска отелей начало -->
-        <h2 class="index-content-title">Заинтересовались?</h2>
-        <p class="text-gray">Укажите предполагаемые даты поездки,<br>
-          и мы покажем вам лучшие предложения гостиниц в седоне </p>
-          <a class="big-text search decoration" href="#">Поиск гостиницы в Седоне</a>
-          <div class="index-search">
-            <form class="clearfix" name="select-item" action="#" method="get">
-              <div class="form-group data-first">
-                <label for="date-check-in">Дата заезда:</label>
-                <input class="field-date" type="text" id="date-check-in">
-                <i class="icon-calendar"></i>
-              </div>
-              <div class="form-group date-second">
-                <label for="date-check-out">Дата выезда:</label>
-                <input class="field-date" type="text" id="date-check-out">
-                <i class="icon-calendar"></i>
-              </div>
-              <div class="form-group adults">
-                <label for="adult">Взрослые:</label>
-                <div class="form-group-controls">
-                  <button class="button-control" type="button">&#8722;</button>
-                  <input class="field-number" type="number" min="1" max="4" step="1" id="adult">
-                  <button class="button-control" type="button">+</button>
-                </div>
-              </div>
-              <div class="form-group kids">
-                <label for="child">Дети:</label>
-                <div class="form-group-controls">
-                  <button class="button-control" type="button">&#8722;</button>
-                  <input class="field-number" type="number" min="1" max="4" step="1" id="child">
-                  <button class="button-control" type="button">+</button>
-                </div>
-              </div>
-              <div class="form-group-btn search-btn">
-                <input class="search" type="submit" value="Найти">
-              </div>
-            </form>
+    </header> <!--хедер страницы конец  -->
+    <main> <!--основной контейнер страницы -->
+      <div class="features">
+        <h1 class="big-text-features">Седона — небольшой городок в Аризоне, <span>заслуживающий большего!</span></h1>
+        <p class="features-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        <div class="features-first">
+          <div class="features-first-text">
+            <b>Настоящий <span>городок</span></b>
+            <span class="number">№1</span>
+            <p>Седона — не аттракцион для туристов, <span>там течет своя жизнь</span></p>
           </div>
-        </div><!-- блок поиска отелей конец -->
-      </div>
-    </main>
-    <footer class="main-footer"> <!--футер начало-->
-      <div class="container block-footer">
-        <div class="footer-contacts">
-          <a class="big-text decoration" href="#">#Visitsedona</a>
+          <div class="features-first-image">
+            <img src="img/index/top.jpg" width="800" height="256" alt="City of Sedona">
+          </div>
         </div>
-        <div class="footer-social">
-          <a class="social-btn social-btn-tv" href="#">Твиттер</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-yt" href="#">Youtube</a>
+        <ul class="features-item">
+          <li class="features-left-image">
+            <b class="features-item-title">Жилье</b>
+            <p class="features-item-description text-gray">Рекомендуем пожить в настоящем <span>мотеле, все как в кино!</span></p>
+          </li>
+          <li class="features-center-image">
+            <b class="features-item-title">Еда</b>
+            <p class="features-item-description text-gray">Всегда заказывайте фирменный бургер, <span>вы не разочаруетесь!</span></p>
+          </li>
+          <li class="features-right-image">
+            <b class="features-item-title">Сувениры</b>
+            <p class="features-item-description text-gray">Не только китайского, но и местного <span>производства!</span></p>
+          </li>
+        </ul>
+        <div class="features-second">
+          <div class="features-second-image">
+            <img src="img/index/bottom.jpg" width="800" height="256" alt="Canyon of Sedona">
+          </div>
+          <div class="features-second-text">
+            <b>Там есть <span>мост дьявола</span></b>
+            <span class="number">№2</span>
+            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          </div>
         </div>
-        <div class="footer-copyright">
-          <span>Website by</span>
-          <a class="social-btn btn-logo" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+        <ul class="features-items-third-fifth">
+          <li>
+            <b class="features-item-title">Небольшая  <span>площадь</span></b>
+            <span class="number">№3</span>
+            <p class="text-gray">Все достопримечательности <span>находяться очень близко</span></p>
+          </li>
+          <li>
+            <b class="features-item-title">Красивая <span>дорога</span></b>
+            <span class="number">№4</span>
+            <p class="text-gray">Ехать в Седону из Лас-Вегаса совсем  <span>не скучно!</span></p>
+          </li>
+          <li>
+            <b class="features-item-title">Мало <span>туристов</span></b>
+            <span class="number">№5</span>
+            <p class="text-gray">Большинство едет в Гранд-Каньон и <span>толпится там</span></p>
+          </li>
+        </ul>
+        <div class="index-content"> <!-- блок поиска отелей начало -->
+          <h2 class="index-content-title">Заинтересовались?</h2>
+          <p class="text-gray">Укажите предполагаемые даты поездки,<br>
+            и мы покажем вам лучшие предложения гостиниц в седоне </p>
+            <a class="big-text search decoration search-hotels" href="#">Поиск гостиницы в Седоне</a>
+            <div class="index-search">
+              <form class="clearfix" name="select-item" action="#" method="get">
+                <div class="form-group data-first">
+                  <label for="date-check-in">Дата заезда:</label>
+                  <input class="field-date" type="text" id="date-check-in">
+                  <i class="icon-calendar"></i>
+                </div>
+                <div class="form-group date-second">
+                  <label for="date-check-out">Дата выезда:</label>
+                  <input class="field-date" type="text" id="date-check-out">
+                  <i class="icon-calendar"></i>
+                </div>
+                <div class="form-group adults">
+                  <label for="adult">Взрослые:</label>
+                  <div class="form-group-controls">
+                    <button class="button-control" type="button">&#8722;</button>
+                    <input class="field-number" type="number" min="1" max="4" step="1" id="adult">
+                    <button class="button-control" type="button">+</button>
+                  </div>
+                </div>
+                <div class="form-group kids">
+                  <label for="child">Дети:</label>
+                  <div class="form-group-controls">
+                    <button class="button-control" type="button">&#8722;</button>
+                    <input class="field-number" type="number" min="1" max="4" step="1" id="child">
+                    <button class="button-control" type="button">+</button>
+                  </div>
+                </div>
+                <div class="form-group-btn search-btn">
+                  <input class="search" type="submit" value="Найти">
+                </div>
+              </form>
+            </div>
+          </div><!-- блок поиска отелей конец -->
         </div>
-      </div>
-    </footer> <!--футер конец-->
+      </main>
+      <footer class="main-footer"> <!--футер начало-->
+        <div class="block-footer">
+          <div class="footer-contacts">
+            <a class="big-text decoration" href="#">#Visitsedona</a>
+          </div>
+          <div class="footer-social">
+            <a class="social-btn social-btn-tv" href="#">Твиттер</a>
+            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+            <a class="social-btn social-btn-yt" href="#">Youtube</a>
+          </div>
+          <div class="footer-copyright">
+            <span>Website by</span>
+            <a class="social-btn btn-logo" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+          </div>
+        </div>
+      </footer><!--футер конец-->
+    </div>
   </body>
-  </html>
+</html>
