--- a/hotels.html
+++ b/hotels.html
@@ -8,8 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header">     <!--хедер страницы  -->
-    <div class="container">
+  <div class="container shadow">
+    <header class="main-header">     <!--хедер страницы  -->
       <nav class="main-navigation">          <!--Основная навигация  -->
         <ul class="header-menu">
           <li>
@@ -29,146 +29,146 @@
       <div class="header-logo">   <!-- лого в шапке -->
         <a  href="index.html"><img src="img/index/logo-header.png" width="138" height="70" alt="City of Sedona"></a>
       </div>
-    </div>
-  </header> <!--хедер  конец  -->
-  <main class="container"> <!--основной контейнер страницы -->
-    <div class= "selection">
-      <div class="selection-left"> <!--сортировка -->
-        <form action="#" method="get">
-          <fieldset class="items-selection-title select-left">
-            <legend>Инфраструктура:</legend>
-            <div class="form-group">
-              <input class="box" type="checkbox" name="infrastructure1" id="select-waterpool" checked>
-              <label class="first-check" for="select-waterpool">Бассейн</label>
-            </div>
-            <div class="form-group box-second">
-              <input class="box" type="checkbox" name="infrastructure2" id="select-parking" disabled >
-              <label class="first-check" for="select-parking">Парковка</label>
-            </div>
-            <div class="form-group">
-              <input class="box" type="checkbox" name="infrastructure3" id="select-internet" disabled>
-              <label class="first-check" for="select-internet">wi-fi</label>
-            </div>
-          </fieldset>
-          <fieldset class="items-selection-title select-center">
-            <legend>Тип Жилья:</legend>
-            <div class="form-group">
-              <input class="box" type="checkbox" name="type1" id="select-hotel" checked>
-              <label class="second-check " for="select-hotel">Гостиница</label>
-            </div>
-            <div class="form-group">
-              <input class="box" type="checkbox" name="type2" id="select-motel" checked>
-              <label class="second-check" for="select-motel">Мотель</label>
-            </div>
-            <div class="form-group">
-              <input class="box" type="checkbox" name="type3" id="select-apartments" checked>
-              <label class="second-check" for="select-apartments">Апартаменты</label>
-            </div>
-          </fieldset>
-          <fieldset class="filter-range">
-            <legend class="filter-range-title">Стоимость в сутки (Р):</legend>
-            <div class="price-controls">
-              <label class="min-price">от <input type="number" name="min-price" value="0"></label>
-              <label class="max-price">до <input type="number" name="max-price" value="3000"></label>
-            </div>
-            <div class="range-controls">
-              <div class="scale">
-                <div class="bar"></div>
+    </header> <!--хедер  конец  -->
+    <main> <!--основной контейнер страницы -->
+      <div class= "selection">
+        <div class="selection-left"> <!--сортировка -->
+          <form action="#" method="get">
+            <fieldset class="items-selection-title select-left">
+              <legend>Инфраструктура:</legend>
+              <div class="form-group">
+                <input class="box" type="checkbox" name="infrastructure1" id="select-waterpool" checked>
+                <label class="first-check" for="select-waterpool">Бассейн</label>
               </div>
-              <div class="range-toggle range-toggle-min"></div>
-              <div class="range-toggle range-toggle-max"></div>
+              <div class="form-group box-second">
+                <input class="box" type="checkbox" name="infrastructure2" id="select-parking" disabled >
+                <label class="first-check" for="select-parking">Парковка</label>
+              </div>
+              <div class="form-group">
+                <input class="box" type="checkbox" name="infrastructure3" id="select-internet" disabled>
+                <label class="first-check" for="select-internet">wi-fi</label>
+              </div>
+            </fieldset>
+            <fieldset class="items-selection-title select-center">
+              <legend>Тип Жилья:</legend>
+              <div class="form-group">
+                <input class="box" type="checkbox" name="type1" id="select-hotel" checked>
+                <label class="second-check " for="select-hotel">Гостиница</label>
+              </div>
+              <div class="form-group">
+                <input class="box" type="checkbox" name="type2" id="select-motel" checked>
+                <label class="second-check" for="select-motel">Мотель</label>
+              </div>
+              <div class="form-group">
+                <input class="box" type="checkbox" name="type3" id="select-apartments" checked>
+                <label class="second-check" for="select-apartments">Апартаменты</label>
+              </div>
+            </fieldset>
+            <fieldset class="filter-range">
+              <legend class="filter-range-title">Стоимость в сутки (Р):</legend>
+              <div class="price-controls">
+                <label class="min-price">от <input type="number" name="min-price" value="0"></label>
+                <label class="max-price">до <input type="number" name="max-price" value="3000"></label>
+              </div>
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar"></div>
+                </div>
+                <div class="range-toggle range-toggle-min"></div>
+                <div class="range-toggle range-toggle-max"></div>
+              </div>
+              <button class="btn-range" type="submit">Показать</button>
+            </fieldset>
+          </form>
+        </div>
+      </div> <!--сортировка конец-->
+      <section class="result">  <!--блок результатов-->
+        <div class="result-top">
+          <strong>Найдено: 3</strong>
+          <b>Сортировка:</b>
+          <ul class="result-menu">
+            <li>
+              <a class="text-result-menu result-active" href="#">По цене</a>
+            </li>
+            <li>
+              <a class="text-result-menu active-result-menu" href="#">По типу</a>
+            </li>
+            <li>
+              <a class="text-result-menu active-result-menu" href="#">По рейтингу</a>
+            </li>
+          </ul>
+          <ul class="arrow">
+            <li>
+              <a class="arrow-result-menu" href="#" title="По возрастанию">▲</a>
+            </li>
+            <li>
+              <a class="arrow-result-menu active-arrow" href="#" title="По убыванию">▼</a>
+            </li>
+          </ul>
+        </div>
+        <article class="result-item clearfix">
+          <div class="result-item-left">
+            <img src="img/hotels/hotels-top.jpg" width="135" height="90" alt="Amara Resort Spa">
+            <div class="result-item-text">
+              <a class="btn-hotel-name" href="#"><h2 class="legend-result">Amara Resort & Spa</h2></a>
+              <mark><span class="type-result">Гостиница</span><span class="price-result result-first">от 4000 р.</span></mark>
+              <a class="btn-info" href="#"><span>Подробнее</span></a>
+              <a class="btn-buy" href="#"><span>Забронировать</span></a>
             </div>
-            <button class="btn-range" type="submit">Показать</button>
-          </fieldset>
-        </form>
-      </div>
-    </div> <!--сортировка конец-->
-    <section class="result">  <!--блок результатов-->
-      <div class="result-top">
-        <strong>Найдено: 3</strong>
-        <b>Сортировка:</b>
-        <ul class="result-menu">
-          <li>
-            <a class="text-result-menu result-active" href="#">По цене</a>
-          </li>
-          <li>
-            <a class="text-result-menu active-result-menu" href="#">По типу</a>
-          </li>
-          <li>
-            <a class="text-result-menu active-result-menu" href="#">По рейтингу</a>
-          </li>
-        </ul>
-        <ul class="arrow">
-          <li>
-            <a class="arrow-result-menu" href="#" title="По возрастанию">▲</a>
-          </li>
-          <li>
-            <a class="arrow-result-menu active-arrow" href="#" title="По убыванию">▼</a>
-          </li>
-        </ul>
-      </div>
-      <article class="result-item clearfix">
-        <div class="result-item-left">
-          <img src="img/hotels/hotels-top.jpg" width="135" height="90" alt="Amara Resort Spa">
-          <div class="result-item-text">
-            <a class="btn-hotel-name" href="#"><h2 class="legend-result">Amara Resort & Spa</h2></a>
-            <mark><span class="type-result">Гостиница</span><span class="price-result result-first">от 4000 р.</span></mark>
-            <a class="btn-info" href="#"><span>Подробнее</span></a>
-            <a class="btn-buy" href="#"><span>Забронировать</span></a>
           </div>
-        </div>
-        <div class="star-rating">
-          <mark>рейтинг:8,5</mark>
-          <i class="hotel-rating hotel-rating-four"></i>
-        </div>
-      </article>
-      <article class="result-item clearfix">
-        <div class="result-item-left">
-          <img src="img/hotels/hotels-middle.jpg" width="135" height="90" alt="Desert Quail Inn">
-          <div class="result-item-text">
-            <a class="btn-hotel-name" href="#"><h2 class="legend-result">Desert Quail Inn</h2></a>
-            <mark><span class="type-result">Мотель</span><span class="price-result result-second">от 3000 р.</span></mark>
-            <a class="btn-info" href="#"><span>Подробнее</span></a>
-            <a class="btn-buy" href="#"><span>Забронировать</span></a>
+          <div class="star-rating">
+            <mark>рейтинг:8,5</mark>
+            <i class="hotel-rating hotel-rating-four"></i>
           </div>
-        </div>
-        <div class="star-rating">
-          <mark>рейтинг:8,9</mark>
-          <i class="hotel-rating hotel-rating-three"></i>
-        </div>
-      </article>
-      <article class="result-item clearfix">
-        <div class="result-item-left">
-          <img src="img/hotels/hotels-bottom.jpg" width="135" height="90" alt="Villas At Poco Diablo">
-          <div class="result-item-text">
-            <a class="btn-hotel-name" href="#"><h2 class="legend-result">Villas at Poco Diablo</h2></a>
-            <mark><span class="type-result">Апартаменты</span><span class="price-result">от 2000 р.</span></mark>
-            <a class="btn-info" href="#"><span>Подробнее</span></a>
-            <a class="btn-buy" href="#"><span>Забронировать</span></a>
+        </article>
+        <article class="result-item clearfix">
+          <div class="result-item-left">
+            <img src="img/hotels/hotels-middle.jpg" width="135" height="90" alt="Desert Quail Inn">
+            <div class="result-item-text">
+              <a class="btn-hotel-name" href="#"><h2 class="legend-result">Desert Quail Inn</h2></a>
+              <mark><span class="type-result">Мотель</span><span class="price-result result-second">от 3000 р.</span></mark>
+              <a class="btn-info" href="#"><span>Подробнее</span></a>
+              <a class="btn-buy" href="#"><span>Забронировать</span></a>
+            </div>
           </div>
+          <div class="star-rating">
+            <mark>рейтинг:8,9</mark>
+            <i class="hotel-rating hotel-rating-three"></i>
+          </div>
+        </article>
+        <article class="result-item clearfix">
+          <div class="result-item-left">
+            <img src="img/hotels/hotels-bottom.jpg" width="135" height="90" alt="Villas At Poco Diablo">
+            <div class="result-item-text">
+              <a class="btn-hotel-name" href="#"><h2 class="legend-result">Villas at Poco Diablo</h2></a>
+              <mark><span class="type-result">Апартаменты</span><span class="price-result">от 2000 р.</span></mark>
+              <a class="btn-info" href="#"><span>Подробнее</span></a>
+              <a class="btn-buy" href="#"><span>Забронировать</span></a>
+            </div>
+          </div>
+          <div class="star-rating">
+            <mark>рейтинг:9,2</mark>
+            <i class="hotel-rating hotel-rating-two"></i>
+          </div>
+        </article>
+      </section> <!--блок результатов конец-->
+    </main>
+    <footer class="main-footer"> <!--футер начало-->
+      <div class="block-footer">
+        <div class="footer-contacts">
+          <a class="big-text" href="#">#Visitsedona</a>
         </div>
-        <div class="star-rating">
-          <mark>рейтинг:9,2</mark>
-          <i class="hotel-rating hotel-rating-two"></i>
+        <div class="footer-social">
+          <a class="social-btn social-btn-tv" href="#">Твиттер</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-yt" href="#">Youtube</a>
         </div>
-      </article>
-    </section> <!--блок результатов конец-->
-  </main>
-  <footer class="main-footer"> <!--футер начало-->
-    <div class="container block-footer">
-      <div class="footer-contacts">
-        <a class="big-text" href="#">#Visitsedona</a>
+        <div class="footer-copyright">
+          <span>Website by</span>
+          <a class="btn-logo social-btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+        </div>
       </div>
-      <div class="footer-social">
-        <a class="social-btn social-btn-tv" href="#">Твиттер</a>
-        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-        <a class="social-btn social-btn-yt" href="#">Youtube</a>
-      </div>
-      <div class="footer-copyright">
-        <span>Website by</span>
-        <a class="btn-logo social-btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-      </div>
-    </div>
-  </footer> <!--футер конец-->
+    </footer> <!--футер конец-->
+  </div>
 </body>
 </html>
