--- a/index.html
+++ b/index.html
@@ -143,5 +143,13 @@
         </div>
       </footer><!--футер конец-->
     </div>
+    <script>
+    var link = document.querySelector(".search-hotels");
+    var popup = document.querySelector(".index-search");
+    link.addEventListener("click", function(event) {
+      event.preventDefault();
+      popup.classList.toggle("index-search-close");
+    });
+    </script>
   </body>
 </html>
