--- a/hotels.html
+++ b/hotels.html
@@ -106,7 +106,7 @@
             </li>
           </ul>
         </div>
-        <article class="result-item clearfix">
+        <article class="result-item-first clearfix">
           <div class="result-item-left">
             <img src="img/hotels/hotels-top.jpg" width="135" height="90" alt="Amara Resort Spa">
             <div class="result-item-text">
@@ -121,7 +121,7 @@
             <i class="hotel-rating hotel-rating-four"></i>
           </div>
         </article>
-        <article class="result-item clearfix">
+        <article class="result-item-second clearfix ">
           <div class="result-item-left">
             <img src="img/hotels/hotels-middle.jpg" width="135" height="90" alt="Desert Quail Inn">
             <div class="result-item-text">
@@ -136,7 +136,7 @@
             <i class="hotel-rating hotel-rating-three"></i>
           </div>
         </article>
-        <article class="result-item clearfix">
+        <article class="result-item-third clearfix">
           <div class="result-item-left">
             <img src="img/hotels/hotels-bottom.jpg" width="135" height="90" alt="Villas At Poco Diablo">
             <div class="result-item-text">
