--- a/index.html
+++ b/index.html
@@ -143,13 +143,6 @@
         </div>
       </footer><!--футер конец-->
     </div>
-    <script>
-    var link = document.querySelector(".search-hotels");
-    var popup = document.querySelector(".index-search");
-    link.addEventListener("click", function(event) {
-      event.preventDefault();
-      popup.classList.toggle("index-search-close");
-    });
-    </script>
+    <script src="js/script-index-search.js"></script>
   </body>
 </html>
