--- a/index.html
+++ b/index.html
@@ -143,6 +143,6 @@
         </div>
       </footer><!--футер конец-->
     </div>
-    <script src="js/script-index-search.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
